ticketing-local/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "session"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx  # Ensure this matches your IngressClass name
  rules:
  - host: ticketing.site
    http:
      paths:
      - path: /api/users/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-srv
            port:
              number: 3000
      - path: /api/tickets/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tickets-srv
            port:
              number: 3000
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-srv
            port:
              number: 2500 
  - host: kibana.ticketing.site
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kibana
            port:
              number: 5601
